cros: Fix crash when showing user-add screen.

Bug: 855650
Change-Id: Ib9abc4447eb81365439611953e641d30f97cc58d
Reviewed-on: https://chromium-review.googlesource.com/1112344
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569695}