chrome/browser/chromeos/login/ui/login_display.h
@@ -136,7 +136,7 @@ class LoginDisplay {
 
  protected:
   // Login UI delegate (controller).
-  Delegate* delegate_;
+  Delegate* delegate_ = nullptr;
 
   // Parent window, might be used to create dialog windows.
   gfx::NativeWindow parent_window_ = nullptr;
