chrome/browser/chromeos/login/ui/login_display_host_webui.h
@@ -177,6 +177,9 @@ class LoginDisplayHostWebUI : public LoginDisplayHostCommon,
   // Called when login-prompt-visible signal is caught.
   void OnLoginPromptVisible();
 
+  // Creates or recreates |existing_user_controller_|.
+  void CreateExistingUserController();
+
   // Sign in screen controller.
   std::unique_ptr<ExistingUserController> existing_user_controller_;
 
